test/invalid/range_no_args.py
# range() with no arguments
def main() -> None:
    r = range()  # range() takes 1 to 3 arguments
